tests/fuzzers/bls12381/crashers/16d6e6322c63693890a707c7aa7eb4ff1076a40a.output
panic: runtime error: index out of range [128] with length 128

goroutine 1 [running]:
github.com/ethereum/go-ethereum/tests/fuzzers/bls12381.(*bls12381G2MultiExp).RequiredGas(0x7bde18, 0xc000166000, 0x5000, 0x5000, 0x0)
	/home/matematik/go/src/github.com/ethereum/go-ethereum/tests/fuzzers/bls12381/contracts.go:244 +0xf0
github.com/ethereum/go-ethereum/tests/fuzzers/bls12381.Fuzz(0x7f865f8a1000, 0x9fff, 0x9fff, 0x3)
	/home/matematik/go/src/github.com/ethereum/go-ethereum/tests/fuzzers/bls12381/bls_fuzzer.go:45 +0x2e8
go-fuzz-dep.Main(0xc000098f70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/ethereum/go-ethereum/tests/fuzzers/bls12381/go.fuzz.main/main.go:15 +0x52
exit status 2